--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,25 @@
 /Week 02/Week2_Q1/Week2Q1/build/
 /Week 02/Week2Q3/Week2Q3/nbproject/private/
 /Week 02/Week2Q3/Week2Q3/build/
+/Week 04/tipCalculator.zip
+/Week 05/ch16.zip
+/Week 01/Chapter 8 Example Source Code files.zip
+/Week 02/ch09.zip
+/Week 03/Chapter10 SourceCode.zip
+/Week 04/ch12.zip
+/Week 04/ch13.zip
+/Week 04/ch22.zip
 
 *Tute*
 *Tutorial*
 *Solution*
 *Workshop*
 *Exercise*
+
+*.doc
+*.docx
+*.xls
+*.xlsx
+*.ppt
+*.pptx
+*.pdf
